[tool.poetry]
name = "affirmations"
version = "0.1.0"
description = "Python backend application using Flask to create and read affirmations"
authors = ["dilemmaemma <emmaf.henderson@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.1"
SQLAlchemy = "^2.0.25"
pymongo = "^4.6.1"
flask-sqlalchemy = "^3.1.1"
flask-mongoengine = "^1.0.0"
mongoengine = "^0.27.0"
bson = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
